--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -34,6 +34,7 @@
 
 .shareHr {
   margin: 20px;
+  font-size: 15pt;
 }
 
 .shareBottom {
@@ -60,7 +61,7 @@
 }
 
 .shareOptionText{
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 500;
 }
 
@@ -68,7 +69,8 @@
     border: none;
     padding: 7px;
     border-radius: 5px;
-    background-color: rgb(146, 226, 146);
+    background-color: rgb(67, 218, 245);
+    font-size: 12pt;
     font-weight: 500;
     margin-right: 20px;
     cursor: pointer;
