--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  font-family: 'Playfair Display';
   flex: 3;
   height: calc(100vh - 50px);
   overflow-y: scroll;
@@ -33,7 +34,8 @@
 }
 
 .sidebarIcon {
-  margin-right: 15px;
+  color: rgb(2, 2, 80);
+  margin-right: 1.2rem;
 }
 
 .sidebarButton {
