--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topbarContainer {
   height: 50px;
   width: 100%;
-  background-color: #65cdfd;
+  background-color: rgb(67, 218, 245);
   display: flex;
   align-items: center;
   position: sticky;
@@ -14,8 +14,9 @@
 }
 
 .logo {
-  font-size: 24px;
-  margin-left: 20px;
+  font-size: 2.5rem;
+  font-family: 'Style Script';
+  margin-left: 16%;
   font-weight: bold;
   color: white;
   cursor: pointer;
@@ -58,7 +59,7 @@
 
 .topbarLink {
   margin-right: 10px;
-  font-size: 14px;
+  font-size: 1.2rem;
   cursor: pointer;
 }
 
