--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -24,7 +24,7 @@
 .loginLogo {
   font-size: 50px;
   font-weight: 800;
-  color: #1775ee;
+  color: #50dfdb;
   margin-bottom: 10px;
 }
 
@@ -58,7 +58,7 @@
     height: 50px;
     border-radius: 10px;
     border: none;
-    background-color: #1775ee;
+    background-color: #50dfdb;
     color: white;
     font-size: 20px;
     font-weight: 500;
@@ -76,7 +76,7 @@
     height: 50px;
     border-radius: 10px;
     border: none;
-    background-color: #42b72a;
+    background-color: #ec7220;
     color: white;
     font-size: 20px;
     font-weight: 500;
