--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -82,3 +82,106 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+
+
+.registerLogoimg {
+  position: absolute;
+  top: 45%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  width: 25vw;
+  height: 45vh;
+  background: #111845a6;
+  box-sizing: border-box;
+  overflow: hidden;
+  box-shadow: 0 20px 50px rgb(23, 32, 90);
+  border: 2px solid #2a3cad;
+  color: white;
+  padding: 20px;
+}
+
+.registerLogoimg:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.registerLogoimg:hover:before {
+  left: -50%;
+  transform: skewX(-5deg);
+}
+
+.registerLogoimg {
+  position: absolute;
+  /* top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px; */
+  border: 1px solid #f0a591;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(9, 0, 0, 0.5);
+}
+
+.registerLogoimg span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  box-sizing: border-box;
+}
+
+.registerLogoimg span:nth-child(1) {
+  transform: rotate(0deg);
+}
+
+.registerLogoimg span:nth-child(2) {
+  transform: rotate(90deg);
+}
+
+.registerLogoimg span:nth-child(3) {
+  transform: rotate(180deg);
+}
+
+.registerLogoimg span:nth-child(4) {
+  transform: rotate(270deg);
+}
+
+.registerLogoimg span:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #50dfdb;
+  animation: animate 4s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  50% {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  50.1% {
+    transform: scaleX(1);
+    transform-origin: right;
+  }
+
+  100% {
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+}
+
